--- a/package.json
+++ b/package.json
@@ -1,22 +1,35 @@
 {
   "scripts": {
-    "dev": "ts-node-dev src/shared/infra/http/server.ts",
+    "dev": "ts-node-dev -r tsconfig-paths/register src/shared/infra/http/server.ts",
     "typeorm": "typeorm-ts-node-esm",
-    "migration:generate": "typeorm-ts-node-commonjs -d ./src/shared/infra/typeorm/migrations/data-source.ts migration:generate -d ./src/shared/infra/typeorm/migrations",
-    "migration:run": "typeorm-ts-node-commonjs -d ./src/shared/infra/typeorm/migrations/data-source.ts migration:run"
+    "migration:run": "typeorm-ts-node-commonjs -d ./src/shared/infra/typeorm/ormconfig.ts migration:run",
+    "migration:revert": "typeorm-ts-node-commonjs migration:revert -d ./src/shared/infra/typeorm/ormconfig.ts"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/pg": "^8.6.5",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/uuid": "^8.3.4",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.1.0",
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cross-var": "^1.1.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.10"
+    "swagger-ui-express": "^4.5.0",
+    "tsyringe": "^4.7.0",
+    "typeorm": "^0.3.10",
+    "uuid": "^9.0.0",
+    "yup": "^0.32.11"
   }
 }
