create documentation for app, swagger and redocly

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,9 @@
       "@config/*": ["config/*"],
       "@shared/*": ["shared/*"],
       "@errors/*": ["errors/*"],
-      "@utils/*": ["utils/*"]
+      "@utils/*": ["utils/*"],
+      "@docs/*": ["documentation/*"]
+
     },
     "esModuleInterop": true,
     "experimentalDecorators": true,
