--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@redocly/cli": "^1.0.0-beta.102",
     "bcrypt": "^5.0.1",
     "cross-var": "^1.1.0",
     "dotenv": "^16.0.3",
